--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -152,7 +152,7 @@
             var lastname = $('#regLastname').val();
             var email = $('#regEmail').val();
             var password = $('#regPassword').val();
-            var data = "?firstname="+firstname+"&lastname="+lastname+"&email="+email+"&password="+password;
+            var data = "firstname="+firstname+"&lastname="+lastname+"&email="+email+"&password="+password;
 
             $.ajax({
                 type: "POST",
@@ -169,6 +169,7 @@
                     }
                     else
                     {
+                        alert(data.path.toString());
 
                         window.location.replace(data.path.toString());
                     }
