--- a/module/Userpage/view/userpage/userpage/updateinfo.phtml
+++ b/module/Userpage/view/userpage/userpage/updateinfo.phtml
@@ -10,84 +10,84 @@
     </style>
 </noscript>
 
-<div class="container">
+<div class="container bg-update">
     <div class="wrapper">
         <div id="st-accordion" class="st-accordion">
             <ul>
                 <li>
-                    <a href="#">About<span class="st-arrow">Open or Close</span></a>
+                    <a class="iconInfo" href="#"> I
+                        <label>Thay đổi hình đại diện</label>
+                        <span class="st-arrow">Open or Close</span>
+                    </a>
                     <div class="st-content">
-                        <p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-                        <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image01"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image02"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image03"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image04"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image05"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image06"/>
+                       <div>
+                           <div>
+                               <label>Hình đại diện</label>
+                               <img src="<?php echo $this->basePath();?>/img/1.jpg">
+                               <input type="file" name="file" id="files">
+                           </div>
+                       </div>
                     </div>
                 </li>
                 <li>
-                    <a href="#">Admissions<span class="st-arrow">Open or Close</span></a>
+                    <a class="iconInfo" href="#"> U
+                        <label style="margin-left: 15px">Giới thiệu bản thân</label>
+                        <span class="st-arrow">Open or Close</span>
+                    </a>
                     <div class="st-content">
-                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image07"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image08"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image09"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image10"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image11"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image12"/>
+                        <form>
+                            <div class="divAboutme">
+                                <label>Trường học: </label>
+                                <input type="text" placeholder="Nhập tên trường bạn đã học...">
+                            </div>
+                            <div class="divAboutme">
+                                <label>Nơi làm việc: </label>
+                                <input type="text" placeholder="Nhập nơi bạn đang làm việc...">
+                            </div>
+                            <div class="divAboutme">
+                                <label>Tình trạng hôn nhân: </label>
+                                <div class="select-wrapper">
+                                    <select>
+                                        <option value="">Chọn...</option>
+                                        <option value="">Độc thân</option>
+                                        <option value="">Đang hẹn hò</option>
+                                        <option value="">Quan hệ mở</option>
+                                        <option value="">Quan hệ phức tạp</option>
+                                        <option value="">Đã kết hôn</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                            <div class="divAboutme">
+                                <label></label>
+                                <button>Cập nhật</button>
+                            </div>
+                        </form>
                     </div>
                 </li>
                 <li>
-                    <a href="#">Admissions<span class="st-arrow">Open or Close</span></a>
-                    <div class="st-content">
-                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image07"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image08"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image09"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image10"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image11"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image12"/>
-                    </div>
-                </li>
-                <li>
-                    <a href="#">Admissions<span class="st-arrow">Open or Close</span></a>
-                    <div class="st-content">
-                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image07"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image08"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image09"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image10"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image11"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image12"/>
-                    </div>
-                </li>
-                <li>
-                    <a href="#">Admissions<span class="st-arrow">Open or Close</span></a>
-                    <div class="st-content">
-                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image07"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image08"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image09"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image10"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image11"/>
-                        <img src="<?php echo $this->basePath();?>/img/1.jpg" alt="image12"/>
-                    </div>
-                </li>
-                <li>
-                    <a href="#">Education<span class="st-arrow">Open or Close</span></a>
+                    <a class="iconInfo" href="#"> D
+                        <label style="margin-left: 15px;">Thông tin cơ bản</label>
+                        <span class="st-arrow">Open or Close</span>
+                    </a>
                     <div class="st-content">
                         <p>O my friend - but it is too much for my strength - I sink under the weight of the splendour of these visions!</p>
                         <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</p>
                     </div>
                 </li>
+                <li>
+                    <a class="iconInfo" href="#"> S
+                        <label style="margin-left: 15px;">Cài đặt tài khoản</label>
+                        <span class="st-arrow">Open or Close</span>
+                    </a>
+                    <div class="st-content">
+                        <p>O my friend - but it is too much for my strength - I sink under the weight of the splendour of these visions!</p>
+                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                        <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</p>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </div>
