--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,7 +252,7 @@ footer {
 /*}*/
 
 .bodyUserpage {
-    /*background-image:url("../img/bg_userpage.JPG");*/
+    background-image:url("../img/friend_background.png");
     background-color: #e5e5e5;
     font-family: "Roboto Slab", Tahoma;
 }
@@ -1531,6 +1531,11 @@ footer {
     src: local('Josefin Slab Bold'), local('JosefinSlab-Bold'), url(http://themes.googleusercontent.com/static/fonts/josefinslab/v3/NbE6ykYuM2IyEwxQxOIi2Hl4twXkwp3_u9ZoePkT564.woff) format('woff');
 }
 
+.bg-update{
+    /*background-image: url("../img/pattern.png");*/
+    /*background-repeat: repeat-x repeat-y;*/
+}
+
 .wrapper{
     width:90%;
     max-width:800px;
@@ -1551,7 +1556,7 @@ footer {
     border-top:none;
 }
 .st-accordion ul li > a{
-    font-family: 'Josefin Slab',Georgia, serif;
+    /*font-family: 'Terminal Dosis' !important;*/
     text-shadow: 1px 1px 1px #fff;
     font-size: 46px;
     display: block;
@@ -1564,6 +1569,12 @@ footer {
     -ms-transition:  color 0.2s ease-in-out;
     transition:  color 0.2s ease-in-out;
     color: #000000;
+}
+.st-accordion ul li > a > label{
+    font-family: "Roboto Slab", Tahoma;
+    font-size: 35px;
+    cursor: pointer;
+    font-weight: normal !important;
 }
 .st-accordion ul li > a span{
     background: transparent url(../img/down.png) no-repeat center center;
@@ -1602,7 +1613,13 @@ footer {
     opacity:1;
 }
 .st-content{
-    padding: 5px 0px 30px 0px;
+    /*padding: 5px 0px 30px 0px;*/
+    background-image: url('../img/pattern.png');
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    padding: 25px;
 }
 .st-content p{
     font-size:  16px;
@@ -1620,6 +1637,140 @@ footer {
     .st-accordion ul li > a{
         font-size:36px;
     }
+}
+
+.divAboutme label{
+    min-width: 150px;
+    font-family: arial;
+}
+
+.divAboutme input {
+    width: 50%;
+    height: 40px;
+    background-color: transparent;
+    padding: 6px 10px;
+    margin-bottom: 10px;
+    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+    color: #333333;
+    border: 1px solid #ccc;
+    outline: none;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5), 0 1px 0 rgba(255, 255, 255, 0.7);
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5), 0 1px 0 rgba(255, 255, 255, 0.7);
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.5);
+}
+
+.divAboutme input:focus{
+    border: 1px solid #7fbbf9;
+    -moz-box-shadow:    inset 0 0 1px rgba(0, 0, 0, 0.5), 0 0 3px #7fbbf9;
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5), 0 0 3px #7fbbf9;
+    box-shadow:         inset 0 0 1px rgba(0, 0, 0, 0.5), 0 0 3px #7fbbf9;
+    background-color: #ffffff;
+}
+.select-wrapper{
+    display: inline-block;
+    width: 300px;
+    border: 1px solid #ccc;
+    -moz-border-radius:    5px;
+    -webkit-border-radius: 5px;
+    border-radius:         5px;
+    -moz-box-shadow:    0 1px 1px rgba(0, 0, 0, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.5);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.5);
+    box-shadow:         0 1px 1px rgba(0, 0, 0, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.5);
+}
+.select-wrapper:before {
+    /*content: '';*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*width: 30px; *//* fix FF with wider than 20px */
+    /*height: 100%;*/
+    /*background-color: #fff;*/
+    /*background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#efefef)); *//* Saf4+, Chrome */
+    /*background-image: -webkit-linear-gradient(top, #ffffff, #efefef); *//* Chrome 10+, Saf5.1+, iOS 5+ */
+    /*-moz-border-radius:    5px;*/
+    /*-webkit-border-radius: 5px;*/
+    /*border-radius:         5px;*/
+}
+.select-wrapper:after {
+    content: '';
+    border: 6px solid transparent;
+    border-top: 6px solid #444;
+    position: absolute;
+    margin-top: -20px;
+    margin-left: 270px;
+}
+.select-wrapper select {
+    width: 290px;
+    height: 24px;
+    padding: 8px 0 4px 10px;
+    border: 0;
+    background: transparent none;
+    outline: none;
+    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -moz-appearance:    none;
+    -webkit-appearance: none;
+    appearance:         none;
+    -moz-box-sizing:    content-box;
+    -webkit-box-sizing: content-box;
+    box-sizing:         content-box;
+}
+.select-wrapper select:focus{
+    width: 287px;
+    /*width: 220px;*/
+    border-radius: 5px;
+    background-color: transparent;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#efefef));
+    background-image: -webkit-linear-gradient(top, #ffffff, #efefef);
+}
+.select-wrapper:focus{
+    background-color: #ffffff;
+}
+.select-wrapper select option {
+    background: #ededed;
+    height: 24px;
+    width: 100%;
+    padding: 10px 0 2px 10px;
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #fff;
+    -moz-appearance:    none;
+    -webkit-appearance: none;
+    appearance:         none;
+    -moz-box-sizing:    content-box;
+    -webkit-box-sizing: content-box;
+    box-sizing:         content-box;
+}
+
+
+.divAboutme button{
+    margin-top: 15px;
+    color: #ffffff;
+    font-size: 13px;
+    font-family: "Roboto Slab", Tahoma;
+    border: 2px solid #1fa3ff;
+    height: 30px;
+    padding: 5px 5px 5px 5px;
+    display: inline-block;
+    background-color: #1fa3ff;
+    border-color: #FFF;
+    cursor: pointer;
+    transition: all 0.3s linear;
+    -o-transition: background-color 0.5s ease;
+    -webkit-transition: background-color 0.5s ease;
+    -moz-transition: background-color 0.5s ease;
+}
+.divAboutme button:hover{
+    background-color: #FFF;
+    border-color: #1fa3ff;
+    color: #000000;
+}
+.iconInfo{
+    font-family: 'WebSymbolsRegular', cursive;
 }
 
 /*********** END CSS for Update Info **********/
