--- a/module/Application/view/layout/settingpage.phtml
+++ b/module/Application/view/layout/settingpage.phtml
@@ -12,17 +12,24 @@
 
     <!-- Le styles -->
     <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+        ->prependStylesheet($this->basePath() . '/css/lightbox.css')
         ->prependStylesheet($this->basePath() . '/css/style.css')
         ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
         ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
 
     <!-- Scripts -->
     <?php echo $this->headScript()
-        ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+        ->prependFile($this->basePath() . '/js/script.cropImage.private.js')
+        ->prependFile($this->basePath() . '/js/jquery.imgareaselect.pack.js')
+        ->prependFile($this->basePath() . '/js/lightbox.js')
+        ->prependFile($this->basePath() . '/js/scriptaculous.js?load=effects,builder')
+        ->prependFile($this->basePath() . '/js/prototype.js')
         ->prependFile($this->basePath() . '/js/jquery.validate.min.js')
         ->prependFile($this->basePath() . '/js/jquery.accordion.js')
         ->prependFile($this->basePath() . '/js/jquery.easing.1.3.js')
-        ->prependFile($this->basePath() . '/js/jquery-1.9.1.js')
+        ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+        ->prependFile($this->basePath() . '/js/jquery.validate.min.js')
+        ->prependFile($this->basePath() . '/js/jquery.1.7.1.min.js')
         ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
         ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
     ; ?>
@@ -118,38 +125,39 @@
 
 
 <script type="text/javascript">
-    $(document).ready(function(){
+    jQuery(document).ready(function(){
         //set class for body
-        $('body').addClass('bodyFriendPage');
+        jQuery('body').addClass('bodyFriendPage');
 
         //set with for some div
         function calWidthSearchDiv()
         {
-            var winWidth = $(window).width();
+            var winWidth = jQuery(window).width();
+            var winHeight = jQuery(window).height();
             var widthBlack = winWidth - 280;
-            $('.fiend-container').css('width', winWidth + "px");
-            $('.rightContent-friend').css('width', widthBlack + "px");
+            jQuery('.fiend-container').css('width', winWidth + "px");
+            jQuery('.rightContent-friend').css('width', widthBlack + "px");
         }
 
         //dieu chinh div truoc khi load.
         calWidthSearchDiv();
 
         //on window resize
-        $(window).resize(function(){
+        jQuery(window).resize(function(){
             calWidthSearchDiv();
         });
 
         //effect for each friend
-        $('.ec-circle').hover(function(){
-            $(this).children().css('color', 'white');
+        jQuery('.ec-circle').hover(function(){
+            jQuery(this).children().css('color', 'white');
         },function(){
-            $(this).children().css('color', 'transparent');
-        })
+            jQuery(this).children().css('color', 'transparent');
+        });
+
 
     });
 
 </script>
-
 
 </body>
 </html>
