--- a/module/Userpage/view/userpage/userpage/index.phtml
+++ b/module/Userpage/view/userpage/userpage/index.phtml
@@ -11,7 +11,7 @@
     $('html').addClass('bodyUserpage');
 </script>
 
-<?php //echo $this->url('success', array('action' => 'friend'));?>
+<input type="hidden" id="userID" value="<?php echo $datauser->getUserid(); ?>">
 
 <div class="divLeft">
     <div class="divSubMenu">
@@ -117,7 +117,7 @@
             <img src="<?php echo $this->basePath(); ?>/img/avatar2.jpg" id="userAvatar" />
         </div>
         <div class="userInfo">
-            <div class="info name">Nguyễn Xuân Bình</div>
+            <div class="info name"><?php echo $datauser->getLastname() .' '. $datauser->getFirstname(); ?></div>
             <div class="info age">
                 <div class="infoIcon age"></div>
                 <div class="infoContent age">08 Dec 1991</div>
